--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="text">I'm a Student and I'm a <span class="typing-2"></span></div>
                     <div id="about-text"></div>
                 </div>
-            </div>about_text
+            </div>
         </div>
     </section>
 
